tests/compiler_errors/const_size_of_unknown_type.tlp
const foo SizeOf(bar) end